[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/LocationActionButtons.gd" type="Script" id=1]

[node name="LocationActionButtons" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 288.0
offset_top = 192.0
offset_right = 704.0
offset_bottom = 216.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
offset_right = 206.0
offset_bottom = 24.0
size_flags_horizontal = 3

[node name="WorkButton" type="Button" parent="HBoxContainer/HBoxContainer"]
offset_right = 45.0
offset_bottom = 24.0
text = "Work"

[node name="RestButton" type="Button" parent="HBoxContainer/HBoxContainer"]
offset_left = 49.0
offset_right = 89.0
offset_bottom = 24.0
text = "Rest"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
offset_left = 210.0
offset_right = 416.0
offset_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="DoneButton" type="Button" parent="HBoxContainer/HBoxContainer2"]
offset_left = 160.0
offset_right = 206.0
offset_bottom = 24.0
pivot_offset = Vector2( -404, -42 )
text = "Done"

[connection signal="pressed" from="HBoxContainer/HBoxContainer/WorkButton" to="." method="_on_WorkButton_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/RestButton" to="." method="_on_RestButton_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer2/DoneButton" to="." method="_on_DoneButton_pressed"]
